<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/linear_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical"
        tools:context=".DetailActivity">


        <ImageView
            android:id="@+id/imgClub"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/ic_image"
            android:layout_margin="8dp"
            android:scaleType="centerInside"
            android:contentDescription="@string/image_club" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/name"
                android:textAlignment="viewStart"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/tv_teamName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="3"
                android:gravity="end" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#616161" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/liga"
                android:textAlignment="viewStart"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/tv_LigaName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="end" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#616161" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/manager_team"
                android:textAlignment="viewStart"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/tv_ManagerName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="end" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#616161" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/stadium"
                android:textAlignment="viewStart"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/tv_StadiumName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="end" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#616161" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/lokasi_stadium"
                android:textAlignment="viewStart"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/tv_LocationName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="end" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#616161" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/kapasitas_staduim"
                android:textAlignment="viewStart"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/tv_Capacity_Stadium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="end" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#616161" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/asal_negara"
                android:textAlignment="viewStart"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/tv_AsalNegara"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="end" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#616161" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/website_official"
                android:textAlignment="viewStart"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/tv_WebOfficial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="end" />

        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Deskripsi Club"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"/>

        <TextView
            android:id="@+id/tv_DescClub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:text="@string/detail_club"
            android:layout_margin="8dp"
            android:textSize="16sp"
            android:gravity="start" />


    </LinearLayout>
</ScrollView>