<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_marginTop="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="2dp"
    android:layout_marginRight="2dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="10dp">

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center">

    <ImageView
        android:id="@+id/clubImg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:src="@drawable/ic_image"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        tools:targetApi="lollipop"
        android:contentDescription="@string/image_club" />

    <TextView
        android:id="@+id/tv_clubName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@id/clubImg"
        android:layout_toRightOf="@id/clubImg"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:text="Nama Club" />

    <TextView
        android:id="@+id/tv_clubLiga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/clubImg"
        android:layout_below="@id/tv_clubName"
        android:maxLines="5"
        android:textSize="14sp"
        tools:text="Liga Club"
        android:layout_toEndOf="@+id/clubImg" />


    <Button
        android:id="@+id/btn_share"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/share"
        android:onClick="sendIntent"
        android:background="@android:color/holo_blue_light"
        android:layout_below="@id/tv_clubLiga"
        android:layout_marginRight="16dp"
        android:layout_toRightOf="@id/btn_Favorite"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_toEndOf="@id/btn_Favorite" />

    <Button
        android:id="@+id/btn_Favorite"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/favorite"
        android:onClick="favorite"
        android:background="@android:color/holo_blue_light"
        android:layout_below="@id/tv_clubLiga"
        android:layout_marginTop="16dp"
        android:layout_toRightOf="@id/clubImg"
        android:layout_toEndOf="@id/clubImg" />

  </RelativeLayout>
</android.support.v7.widget.CardView>

